--- a/tags.html
+++ b/tags.html
@@ -9,7 +9,7 @@
         <h2>About Me</h2>
         <p>I am from London</p>
         <p>At 18 I moved to Seattle to get a business degree</p>
- <img src="apple.jpg" alt="me" height="200" width="300">
+ <img src="apple.JPG" alt="me" height="200" width="300">
  <h3>I make youtube videos</h3> 
  <iframe width="560" height="315" src="https://www.youtube.com/embed/YWTx7hcyvms" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>  
  <h2>My Favorite Websites</h2>
